--- a/package.json
+++ b/package.json
@@ -18,5 +18,17 @@
     "sass-loader": "^12.0.0",
     "vite": "^2.9.12",
     "vue-cli-plugin-quasar": "~5.0.1"
-  }
+  },
+  "description": "This template should help get you started developing with Vue 3 in Vite.",
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/serrgeyOkhr/cinema-project.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/serrgeyOkhr/cinema-project/issues"
+  },
+  "homepage": "https://github.com/serrgeyOkhr/cinema-project#readme"
 }
