--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "build": "vite build",
-    "dev": "vite",
+    "start": "vite",
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
