--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "build": "vite build",
-    "start": "vite",
+    "dev": "vite",
+    "start": "node server.js",
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
