--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "express": "^4.18.1",
+    "node-fetch": "^2.6.7",
     "quasar": "^2.0.0",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
